# CrewAIDocsMCP

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  main_http.py  main_stdio.py  pyproject.toml  setup.py  smithery.json  smithery.yaml  test_crewai_mcp.py  test_server.py
fast_api/: crewai_docs_server.py  server.py  tavily_server.py
services/: cache_service.py  concept_discovery.py  documentation_service.py  github_client.py  search_service.py  vector_search.py
utils/: doc_parser.py  mdx_parser.py
