[project]
name = "crewai-docs-mcp-server"
version = "0.1.0"
description = "HTTP Streamable based CrewAI Documentation MCP Server"
requires-python = ">=3.12"
dependencies = [
    "httpx~=0.28.0",
    "fastmcp==2.6.1",
    "lru-dict>=1.3.0",
    "python-dotenv>=1.1.1",
    "whoosh>=2.7.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
